EXOJCR-988: StandaloneContainer.initConfigurationURL fixed